Added basic changes for Duplex

--- a/MngrPaycheck.Administrator/App.config
+++ b/MngrPaycheck.Administrator/App.config
@@ -7,16 +7,28 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IProductRepositoryService" />
                 <binding name="BasicHttpBinding_IProductParameterValueRepositoryService" />
                 <binding name="BasicHttpBinding_IProductParameterRepositoryService" />
                 <binding name="BasicHttpBinding_IProductTypeRepositoryService" />
             </basicHttpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IProductRepositoryService" closeTimeout="00:01:00"
+                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+                    bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="5242880" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <reliableSession ordered="true" inactivityTimeout="00:10:00" />
+                    <security mode="Message">
+                        <message clientCredentialType="Windows" negotiateServiceCredential="true"
+                            algorithmSuite="Default" />
+                    </security>
+                </binding>
+                <binding name="WSDualHttpBinding_IProductRepositoryService1" />
+            </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
-                contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
             <endpoint address="http://localhost:25643/ProductParameterValueRepositoryService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductParameterValueRepositoryService"
                 contract="ProductParameterValueServiceReference.IProductParameterValueRepositoryService"
@@ -29,6 +41,13 @@
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductTypeRepositoryService"
                 contract="ProductTypeServiceRef.IProductTypeRepositoryService"
                 name="BasicHttpBinding_IProductTypeRepositoryService" />
+            <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IProductRepositoryService"
+                contract="ProductServiceRef.IProductRepositoryService" name="WSDualHttpBinding_IProductRepositoryService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
