--- a/MngrPaycheck.CommunicationCommon/app.config
+++ b/MngrPaycheck.CommunicationCommon/app.config
@@ -4,8 +4,6 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IProductTypeRepositoryService" />
-                <binding name="BasicHttpBinding_IProductRepositoryService" />
-                <binding name="BasicHttpBinding_IProductRepositoryService1" />
                 <binding name="BasicHttpBinding_IProductParameterRepositoryService" />
                 <binding name="BasicHttpBinding_IProductParameterValueRepositoryService" />
                 <binding name="BasicHttpBinding_IProductTypeRepositoryService1" />
@@ -13,6 +11,21 @@
                 <binding name="BasicHttpBinding_IPurchaseRepositoryService" />
                 <binding name="BasicHttpBinding_IPurchaseProductRepositoryService" />
             </basicHttpBinding>
+          <wsDualHttpBinding>
+            <binding name="WSDualHttpBinding_IProductRepositoryService" closeTimeout="00:01:00"
+                openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+                bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+                maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
+              <readerQuotas maxDepth="32" maxStringContentLength="5242880" maxArrayLength="16384"
+                  maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+              <reliableSession ordered="true" inactivityTimeout="00:10:00" />
+              <security mode="Message">
+                <message clientCredentialType="Windows" negotiateServiceCredential="true"
+                    algorithmSuite="Default" />
+              </security>
+            </binding>
+          </wsDualHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:3595/ProductTypeRepositoryService.svc"
@@ -22,9 +35,6 @@
             <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
                 contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
-            <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService1"
-                contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService1" />
             <endpoint address="http://localhost:23010/ProductParameterRepositoryService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductParameterRepositoryService"
                 contract="ProductParameterServiceRefer.IProductParameterRepositoryService"
@@ -47,6 +57,13 @@
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPurchaseProductRepositoryService"
                 contract="PurchaseProductServiceRef.IPurchaseProductRepositoryService"
                 name="BasicHttpBinding_IPurchaseProductRepositoryService" />
+            <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IProductRepositoryService"
+                contract="ProductServiceRef.IProductRepositoryService" name="WSDualHttpBinding_IProductRepositoryService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
