--- a/ProductService/Web.config
+++ b/ProductService/Web.config
@@ -12,9 +12,31 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <wsDualHttpBinding>
+        <binding name="WSDualHttpBinding_IProductRepositoryService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="5242880" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"/>
+          <security mode="Message">
+            <message clientCredentialType="Windows" negotiateServiceCredential="true" algorithmSuite="Default"/>
+          </security>
+        </binding>
+      </wsDualHttpBinding>
+    </bindings>
+    <services>
+      <service behaviorConfiguration="ProductService.ProductRepositoryService" name="ProductService.ProductRepositoryService">
+        <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IProductRepositoryService" contract="ProductService.IProductRepositoryService">
+          <identity>
+            <dns value="localhost"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+    </services>
+    
     <behaviors>
       <serviceBehaviors>
-        <behavior>
+        <behavior name="ProductService.ProductRepositoryService">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
